Delete confirmation for users

--- a/Ek-ecommerce/resources/views/dashboard/roles/index.edge
+++ b/Ek-ecommerce/resources/views/dashboard/roles/index.edge
@@ -26,7 +26,7 @@
                 <td class="d-flex">
                     <a href="{{ route('dashboard.roles.edit', { id: role.id }) }}" class="btn btn-sm btn-warning">Edit</a>
 
-                    <button type="button" class="btn btn-sm btn-danger ml-3 deleteRoleClass" data-toggle="modal" data-target="#deleteRoleModal">Delete</button>
+                    <button type="button" class="btn btn-sm btn-danger ml-3 deleteRoleBtnClass" data-toggle="modal" data-target="#deleteRoleModal">Delete</button>
                 </td>
             </tr>
             @endeach
