--- a/Ek-ecommerce/resources/views/layouts/dashboard/partials/_scripts.edge
+++ b/Ek-ecommerce/resources/views/layouts/dashboard/partials/_scripts.edge
@@ -16,3 +16,4 @@
 
 {{--  Custom jquery for role/user delete confirmation and ajax call  --}}
 <script src="/js/deleteRole.js"></script>
+<script src="/js/deleteUser.js"></script>
