--- a/Ek-ecommerce/resources/views/dashboard/users/index.edge
+++ b/Ek-ecommerce/resources/views/dashboard/users/index.edge
@@ -19,7 +19,7 @@
         <tbody class="text-center">
             @each(user in users)
             
-            <tr class = {{ auth.user.id === user.id ? "bg-success" : "" }}>
+            <tr class = "{{ auth.user.id === user.id ? "bg-success" : "" }}" data-id = "{{user.id}}">
                 <td >
                     {{user.username}}
                 </td>
@@ -28,10 +28,8 @@
                 <td>{{user.role.name}}</td>
                 <td class="d-flex">
                     <a href="{{ route('dashboard.users.edit', { id: user.id }) }}" class="btn btn-sm btn-warning">Edit</a>
-                    <form action="{{ route('dashboard.users.destroy', { id: user.id }, { qs: { _method: 'DELETE' }}) }}" method="post">
-                        {{ csrfField() }}
-                        <button type="submit" class="btn btn-sm btn-danger ml-2">Delete</button>
-                    </form>
+
+                    <button type="button" class="btn btn-sm btn-danger ml-3 deleteUserBtnClass" data-toggle="modal" data-target="#deleteUserModal">Delete</button>
                 </td>
             </tr>
             @endeach
@@ -41,21 +39,20 @@
  
  
  <!-- Delete User Modal-->
-<div class="modal fade" id="deleteUserModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-aria-hidden="true">
-    <div class="modal-dialog" role="document">
+<div class="modal fade" id="deleteUserModal" tabindex="-1" role="dialog">
+    <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
-                <button class="close" type="button" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">×</span>
+                <h5 class="modal-title">Delete User</h5>
+                <button class="close" type="button" data-dismiss="modal">
+                    <span>&times;</span>
                 </button>
             </div>
-            <div class="modal-body">Are you sure you want to delete this user?</div>
+            <div class="modal-body">
+                Are you sure you want to delete this user?
+            </div>
             <div class="modal-footer">
-                {{--  <form action="{{ route('dashboard.users.destroy', { id: user.id }, { qs: { _method: 'DELETE' }}) }}" method="post">
-                    <button type="submit" class="btn btn-danger" data-dismiss="modal">Delete</button>
-                </form>  --}}
+                <button type="button" class="btn btn-danger" id="confirmBtn">Confirm</button>
             </div>
         </div>
     </div>
